--- a/example/example.html
+++ b/example/example.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="ltr">
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title>DGTable.js Example</title>
