[chore] updated a few initial options, keeping backwards compatibility

--- a/example/example.html
+++ b/example/example.html
@@ -401,7 +401,7 @@
         });
 
         document.getElementById('amsbutton').addEventListener('click', () => {
-            table.setSortableColumns(2);
+            table.setMaxColumnSortCount(2);
         });
 
         document.getElementById('rcmpbutton').addEventListener('click', () => {
